# teams-report-converter

./: .gitignore  LICENSE  README-pt-br.md  README.md  __init__.py  frequency.csv  output.xlsx  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
modules/: report_handler.py
src/ms-teams-attendance-report/: report_handler.py
src/teams-attendance-report/: __main__.py
src/teams_report_converter/: __init__.py  __main__.py  report_handler.py
