[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teams-report-converter"
version = "0.2.0"
description = "Convert meaningless MS Teams attendance text reports into calculated attendance spreadsheets"
readme = "README.md"
authors = [{name = "Renê Fernandes", email = "renefb@proton.me"}]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business",
    "Topic :: Terminals",
    "Topic :: Utilities"
]
keywords = ["microsoft", "teams", "events", "broadcast", "attendance", "report", "conversion", "spreadsheet"]
dependencies = [
    "pandas",
    "openpyxl"
]
requires-python = ">=3.6"

[project.urls]
Homepage = "https://github.com/renefb/teams-report-converter"

[project.scripts]
convert-teams-report = "teams_report_converter.__main__:main"

[tool.bumpver]
current_version = "0.2.3"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
src = [
    teams_report_converter = [
        __init__.py = [
            __version__ = "{version}"
        ]
    ]
]